--- a/app/templates/page_flan.html
+++ b/app/templates/page_flan.html
@@ -10,7 +10,10 @@
     <!-- Grille des évaluations avec bouton d'ajout -->
     <div class="evaluations-section">
         <h3>Evaluations</h3>
-         {{ afficher_grille('evaluation', flan.evaluations, current_user, eval_forms, form_eval, flan=flan) }}
+         {{ afficher_grille('evaluation', flan.evaluations, current_user, None, form_eval, None, flan) }}
+
+
+
     </div>
 
     <!-- Boutons d'action -->
